minor edits for brevity

--- a/swmprats_pres.Rnw
+++ b/swmprats_pres.Rnw
@@ -107,13 +107,14 @@ options(replace.assign = TRUE, width = 60, digits = 1)
 
 %%%%%%
 \begin{frame}
+\vspace{-0.1in}
 \titlepage
 \end{frame}
 
 %%%%%%
 \begin{frame}{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf Overview}}
 \begin{itemize}
-\item The genesis of SWMPrats \\~\\
+\item The genesis of SWMPrats.net\\~\\
 \item Features of SWMPrats.net \\~\\
 \begin{itemize}
 \item SWMPr \\~\\
@@ -152,21 +153,24 @@ One-day training workshop at 2014 annual meeting \\~\\
 \centerline{\fbox{\includegraphics[width = 0.95\textwidth]{fig/swmprats_logo.png}}}
 \vspace{0.2in}
 A working group was formed from this meeting \\~\\
+\large
 \Bigtxt{S}ystem-\Bigtxt{W}ide \Bigtxt{M}onitoring \Bigtxt{P}rogram \Bigtxt{R} \Bigtxt{A}nd \Bigtxt{T}ime \Bigtxt{S}eries \\~\\
+\normalsize
 SWMPrats.net is our base of operations...
 \end{frame}
 
 %%%%%%
 \begin{frame}{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net}}
-\centerline{A time series and data analysis information and tool resource} \\~\\
+\centerline{A time series and data analysis information and tool resource}
+\hspace{0.2in}
 \centerline{\fbox{\includegraphics[width = 0.7\textwidth]{fig/swmprats_home.png}}}
 \end{frame}
 
 %%%%%%
 \begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-\centerline{\includegraphics[width = 0.8\textwidth]{fig/swmpr_logo.png}}
+\centerline{\includegraphics[width = 0.75\textwidth]{fig/swmpr_logo.png}}
 \vspace{0.15in}
-SWMPr is an open-source R package, v2.0.0 is \href{http://cran.r-project.org/web/packages/SWMPr/index.html}{now available}
+SWMPr is an open-source R package described on the website, v2.0.0 is \href{http://cran.r-project.org/web/packages/SWMPr/index.html}{now available}
 <<eval = F>>=
 # install/load from R
 install.packages('SWMPr')
@@ -258,46 +262,9 @@ dat <- comb(met, wq, timestep = 120,
 Try this with excel...
 \end{frame}
 
-%%%%%%
-\begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-<<size = 'small'>>=
-head(dat, 4)
-@
-\end{frame}
-
 %%%%%
 \begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-Time series analysis can range from very general to very specific \\~\\
-SWMPr functions include...\\~\\
-\begin{columns}
-\begin{column}{0.45\textwidth}
-\Bigtxt{General} \\~\\
-\begin{itemize}
-\item \texttt{na.approx}
-\item \texttt{smoother}
-\item \texttt{aggreswmp}
-\item \texttt{plot}
-\item \texttt{hist}
-\item \texttt{lines}
-\end{itemize}
-\end{column}
-\begin{column}{0.45\textwidth}
-\Bigtxt{Specific} \\~\\
-\begin{itemize}
-\item \texttt{decomp}
-\item \texttt{decomp\_cj}
-\item \texttt{ecometab}
-\item \texttt{aggremetab}
-\item \texttt{plot\_metab}
-\item \texttt{plot\_summary}
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-%%%%%
-\begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-Fill missing data with \texttt{na.approx} \\~\\
+Example: fill missing data with \texttt{na.approx} \\~\\
 <<'/filled', fig.width = 8, fig.height = 2, size = 'scriptsize', par = T, , echo = F, out.width = '0.85\\textwidth'>>=
 # import, organize
 data(apadbwq)
@@ -310,7 +277,7 @@ dat <- subset(dat, select = 'do_mgl',
 filled <- na.approx(dat, params = 'do_mgl', maxgap =100)
 plot(filled, col = 'red'); lines(dat, lwd = 2)
 @
-Smooth data with \texttt{smoother} \\~\\
+Example: smooth data with \texttt{smoother} \\~\\
 <<'/smooth', fig.width = 8, fig.height = 2, size = 'scriptsize', par = T, echo = F, out.width = '0.85\\textwidth'>>=
 # import, organize
 data(apadbwq)
@@ -327,7 +294,7 @@ plot(dat); lines(dat_smooth, col = 'red', lwd = 2)
 
 %%%%%%
 \begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-Time series decomposition with \texttt{decomp\_cj} (chl-a at cbmocnut)\\~\\
+Example: time series decomposition with \texttt{decomp\_cj} (chl-a at cbmocnut)\\~\\
 <<'decomp_dep', eval = T, echo = F, fig.height = 5, fig.width = 8, out.width = '0.85\\textwidth'>>=
 # import, organize
 
@@ -344,7 +311,7 @@ out
 
 %%%%%%
 \begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: The SWMPr package}}
-Estimate ecosystem metabolism with \texttt{ecometab} (apadbwq)
+Example: estimate ecosystem metabolism with \texttt{ecometab} (apadbwq)
 <<'/ecometab_dep', echo = F, cache = T>>=
 ## import water quality and weather data, combine
 wq <- import_remote('apadbwq')
@@ -379,7 +346,8 @@ Two apps on SWMPrats.net can help visualize trends \\~\\
 
 %%%%%%
 \begin{frame}[fragile]{\includegraphics[width=0.05\paperwidth]{fig/muskrat.png}\hspace{0.07in}{\bf SWMPrats.net: Forum}}
-Last but not least, a discussion \href{http://swmprats.net/forum}{forum} for all things analytical \\~\\
+\centerline{Last but not least, a discussion \href{http://swmprats.net/forum}{forum} for all things analytical}
+\vspace{0.2in}
 \centerline{\fbox{\includegraphics[width = 0.8\textwidth]{fig/swmprats_forum.png}}}
 \end{frame}
 
@@ -388,8 +356,8 @@ Last but not least, a discussion \href{http://swmprats.net/forum}{forum} for all
 SWMPrats.net is in its infancy but already seeing heavy use \\~\\
 \begin{itemize}
 \item SWMPr downloaded 289 times from R network (as of April 29) \\~\\
-\item Apps have been used 345 hours (as of April 29)
-\end{itemize}\\~\\
+\item Apps have been used 345 hours (as of April 29) \\~\\
+\end{itemize}
 Continuing development of packages/apps - submit suggestions/bug reports via email or on \href{https://github.com/fawda123/SWMPr/issues}{GitHub} (preferred) \\~\\
 Plan for greater engagement with the forum - soliciting moderators, suggested topics \\~\\
 Additional training workshops??
